# auto_test_platrorm

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
apps/api_testing/: utils.py  views.py
web/: package-lock.json  vite.config.js
web/src/pages/api-testing/: InterfaceManagement.jsx
